--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "python.formatting.provider": "autopep8"
+  "python.formatting.provider": "black",
+  "python.testing.unittestArgs": ["-v", "-s", ".", "-p", "*test*.py"],
+  "python.testing.pytestEnabled": false,
+  "python.testing.unittestEnabled": true
 }
